--- a/Paper/sections/authors.tex
+++ b/Paper/sections/authors.tex
@@ -22,10 +22,10 @@
 %
 
 \author{%
-Shayan Eskandari\textsuperscript{1}, Andreas Leoutsarakos\textsuperscript{1}, 
-Troy Mursch\textsuperscript{2}, Jeremy Clark\textsuperscript{1}\\ \\
-1 Concordia University \\
-2 Bad Packets Report
+Shayan Eskandari\textsuperscript{\dag}, Andreas Leoutsarakos\textsuperscript{\dag}, 
+Troy Mursch\textsuperscript{\ddag}, Jeremy Clark\textsuperscript{\dag}\\ \\
+\dag Concordia University \\
+\ddag Bad Packets Report
 }
 
 
