--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -21,7 +21,7 @@ A website administrator can add a mining script to her webpage, with or without 
 
 Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network, accessibility tools or analytics services. Third parties with these privileges can inject cryptojacking scripts into the sites that use them, either intentionally or as a result of a breach. Two first incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America \url{http://globovision.com/}} using Google Tag Manager\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites}. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}. Another high-profile cryptojacking case involving a Google platform occurred in January 2018 when Trend Micro researchers found advertisements containing Coinhive miner script were shown to YouTube users in Japan, France, Taiwan, Italy, and Spain for nearly a week~\cite{trendmicrocoinhive}. Similar to Showtime, YouTube inherently has a high average visit duration as a video streaming site and thus is prime target for cryptojacking operations.
 %HERE 
-Another recent example of such incident is a breach in a website plugin called \textit{Browsealoud}\footnote{An accessibility tool to read the content aloud in multiple languages \url{https://www.texthelp.com/en-gb/products/browsealoud/}} led to injection of cryptojacking scripts in some United Kingdom governmental websites such as \textit{Information Commissioner`s Office, UK NHS services, Manchester City Council} and around 4200 other websites ~\cite{theregisterukgovern}. Within the same month, cryptojacking script was seen on \textit{Tesla} and \textit{LA Times} website through poorly secured cloud configuration~\cite{nakedsecurityLatimes}.
+Another recent example of such incident is a breach in a website plugin called \textit{Browsealoud}\footnote{An accessibility tool to read the content aloud in multiple languages \url{https://www.texthelp.com/en-gb/products/browsealoud/}} led to injection of cryptojacking scripts in some United Kingdom governmental websites such as \textit{Information Commissioner`s Office, UK NHS services, Manchester City Council} and around 4200 other websites ~\cite{theregisterukgovern}. Within the same month, cryptojacking script was seen on \textit{Tesla} and \textit{LA Times} websites through poorly secured cloud configuration~\cite{nakedsecurityLatimes}.
 
 
 \subsection{Browser extensions} 
