--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -18,11 +18,12 @@
 \ytl{2017-10-16}{Coinhive launched authedmine - authorized mining}
 \ytl{2017-11-23}{LiveHelpNow Hack incident\cite{chatsupporthack}}
 %HERE ADD MORE
+\ytl{2018-01-25}{Cryptojacking code found on youtube ads \cite{trendmicrocoinhive}}
 \ytl{2018-02-11}{UK Information Commissioner\'s Office incident\cite{theregisterukgovern}}
  
 % Needs to be completed.
 \bigskip
 \rule{\linewidth}{1pt}%
 \end{minipage}%
-\caption{Timeline of Monero and in-browser mining\label{tab:timeline}}
+\caption{Timeline of Monero and in-browser mining reports\label{tab:timeline}}
 \end{table}
