reviewed till Threat Model

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -267,14 +267,14 @@
 	Year = {2017}}
 
 @misc{googletagcoinhive,
-	Author = {theRegister},
+	Author = {TheRegister},
 	Howpublished = {\url{https://www.theregister.co.uk/2017/11/22/cryptojackers_google_tag_manager_coin_hive/}},
 	Note = {Accessed: 2018-01-20},
 	Title = {Crypto-jackers enlist Google Tag Manager to smuggle alt-coin miners},
 	Year = {2017}}
 
 @misc{chromeextentioncoinhive,
-	Author = {fortune},
+	Author = {Fortune},
 	Howpublished = {\url{http://fortune.com/2018/01/02/google-chrome-extension-cryptocurrency-mining-monero/}},
 	Note = {Accessed: 2018-01-20},
 	Title = {Popular Google Chrome Extension Caught Mining Cryptocurrency on Thousands of Computers},
@@ -289,14 +289,14 @@
 	Year = {2010}}
 
 @misc{operanocoin,
-	Author = {opera},
+	Author = {Opera},
 	Howpublished = {\url{http://blogs.opera.com/desktop/2018/01/opera-50-introduces-anti-bitcoin-mining-tool/}},
 	Note = {Accessed: 2018-01-20},
 	Title = {New year, new browser. Opera 50 introduces anti-Bitcoin mining tool},
 	Year = {2018}}
 
 @misc{registershowtime,
-	Author = {theRegister},
+	Author = {TheRegister},
 	Howpublished = {\url{https://www.theregister.co.uk/2017/09/25/showtime_hit_with_coinmining_script/}},
 	Note = {Accessed: 2018-01-20},
 	Title = {CBS's Showtime caught mining crypto-coins in viewers' web browsers},
@@ -339,6 +339,13 @@
 	Title = {Unsecured AWS led to cryptojacking attack on LA Times},
 	Year = {2018}}
 	
+@article{rosenfeld2011analysis,
+  title={Analysis of bitcoin pooled mining reward systems},
+  author={Rosenfeld, Meni},
+  journal={arXiv preprint arXiv:1112.4980},
+  year={2011}
+}
+
 @misc{badpacketspublicwww,
 	Author = {Troy Mursch},
 	Howpublished = {\url{https://badpackets.net/cryptojacking-malware-coinhive-found-on-30000-websites/}},
