--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -16,7 +16,7 @@
 
 \author{
 
-\IEEEauthorblockN{Shayan Eskandari\IEEEauthorrefmark{1}, Andreas Leoutsarakos\IEEEauthorrefmark{1}, Troy Mursch\IEEEauthorrefmark{2}, and Jeremy Clark\IEEEauthorrefmark{1}}
+\IEEEauthorblockN{Shayan Eskandari\IEEEauthorrefmark{1}, Andreas Leoutsarakos\IEEEauthorrefmark{1}, Troy Mursch\IEEEauthorrefmark{2}, Jeremy Clark\IEEEauthorrefmark{1}}
 
 \IEEEauthorblockA{\IEEEauthorrefmark{1}Concordia University, \IEEEauthorrefmark{2}Bad Packets Report}
 
