--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -8,22 +8,22 @@
 \begin{minipage}[t]{.7\linewidth}
 \color{gray}
 \rule{\linewidth}{1pt}
-\ytl{2013-10-13}{Monero Cryptocurrency appeared}
+\ytl{2014-04-18}{Monero Cryptocurrency released}
 \ytl{2017-09-14}{Coinhive Miner launched}
-\ytl{2017-09-17}{ThePirateBay caught using coinhive\cite{gaurdianelectricity}}
+\ytl{2017-09-17}{ThePirateBay caught using coinhive~\cite{gaurdianelectricity}}
 \ytl{2017-09-21}{Adblockers started to block coinhive scripts}
-\ytl{2017-09-24}{Showtime caught running coinhive\cite{showtimehive}}
+\ytl{2017-09-24}{Showtime caught running coinhive~\cite{showtimehive}}
 \ytl{2017-09-25}{Coinhive clones started to appear}
-\ytl{2017-10-13}{PolitiFact website compromised\cite{politifactcoinhive}}
+\ytl{2017-10-13}{PolitiFact website compromised~\cite{politifactcoinhive}}
 \ytl{2017-10-16}{Coinhive launched authedmine - authorized mining}
-\ytl{2017-11-23}{LiveHelpNow Hack incident\cite{chatsupporthack}}
+\ytl{2017-11-23}{LiveHelpNow Hack incident~\cite{chatsupporthack}}
 %HERE ADD MORE
-\ytl{2018-01-25}{Cryptojacking code found on youtube ads \cite{trendmicrocoinhive}}
-\ytl{2018-02-11}{UK Information Commissioner\'s Office incident\cite{theregisterukgovern}}
+\ytl{2018-01-25}{Cryptojacking code found on Youtube ads~\cite{trendmicrocoinhive}}
+\ytl{2018-02-11}{UK Information Commissioner's Office incident~\cite{theregisterukgovern}}
  
 % Needs to be completed.
-\bigskip
 \rule{\linewidth}{1pt}%
 \end{minipage}%
+\bigskip
 \caption{Timeline of Monero and in-browser mining reports\label{tab:timeline}}
 \end{table}
